Fixed navigation bar issue on mobile Made the website multipage look alike

--- a/sunama.css
+++ b/sunama.css
@@ -113,3 +113,7 @@ hr {
 	height: 32px;
 	background: url(./img/assets/blog.jpeg) no-repeat 0 0px;
 }
+
+.my-section {
+    
+}
